# txtRefine

./: .envrc  .gitignore  .markdownlint-cli2.jsonc  IMPROVEMENTS_SUMMARY.md  IMPROVEMENT_PLAN.md  Makefile  OPENSOURCE_MODELS_GUIDE.md  README.md  batch_config.json  batch_refine.py  compare_models.py  config.json  config.py  config_example.py  main.py  pyproject.toml  refine.py  requirements.txt  simple_refine.py  test.py  test_refinement.py  test_sample.txt  txtrefine  txtrefine.py
.github/workflows/: readme-lint.yml
archive/docs/: CURRENT_TASKS.md  IMPLEMENTATION_PLAN.md  ROADMAP.md
archive/old_scripts/: refine_new.py
archive/scripts/: modularize.py
archive/tests/: test_modularized.py
archive/tests/unit_tests/: __init__.py  test_refine.py
backups/20250823_181227/: test_sample_20250823_181227.txt
docs/: advanced_usage.md
input/: Aula15-AEscolsticaI-HistriaDaFilosofia-OlavoDeCarvalho_20250821_152250.txt  Aula16-XavierZubiriEAEscolstica-HistriaDaFilosofia-OlavoDeCarvalho_20250823_175645.txt  Aula18-SantotomsDeAquino-HistriaDaFilosofia-OlavoDeCarvalho_20250824_141724 copy.txt
output/: refined_Aula15-AEscolsticaI-HistriaDaFilosofia-OlavoDeCarvalho_20250821_152250.txt  refined_Aula18-SantotomsDeAquino-HistriaDaFilosofia-OlavoDeCarvalho_20250824_141724 copy.txt
refine/: __init__.py  bp_philosophy.py  bp_philosophy_optimized.py  enhanced_model_manager.py  exceptions.py  file_manager.py  model_manager.py  ollama_integration.py  philosophy_terms.py  prompt_templates.py  quality_validator.py  smart_chunking.py  term_matching.py  text_processing.py  transcript_refinement.py  ui.py  utils.py
src/: config.py  refine.py
tests/: test_ollama_integration.py  test_term_matching.py  test_transcript_refinement.py  test_utils.py
